applications/api-ingress/sync-bot-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sync-bot-service
spec:
  type: ExternalName
  externalName: sync-bot-service.sync-bot.svc.cluster.local
