applications/api-ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-ingress
spec:
  tls:
    - hosts:
        - api.openeuler.org
      secretName: api-tls
  rules:
    - host: api.openeuler.org
      http:
        paths:
          - backend:
              serviceName: pkgmanage-service-release
              servicePort: 80
            path: /pkgmanage(/|$)(.*)
          - backend:
              serviceName: pkgmanage-service-debug
              servicePort: 80
            path: /pkgmanagedebug(/|$)(.*)
          - backend:
              serviceName: mailman-service
              servicePort: 8001
            path: /mailman(/|$)(.*)
          - backend:
              serviceName: meeting-service
              servicePort: 80
            path: /meetings(/|$)(.*)
          - backend:
              serviceName: bot-debug-service
              servicePort: 8888
            path: /botdebug(/|$)(.*)
          - backend:
              serviceName: bot-release-service
              servicePort: 8888
            path: /botrelease(/|$)(.*)
          - backend:
              serviceName: cve-manager-service
              servicePort: 80
            path: /cve-manager(/|$)(.*)
          - backend:
              serviceName: nginx-purger-service
              servicePort: 80
            path: /nginx-purger(/|$)(.*)
          - backend:
              serviceName: sync-bot-service
              servicePort: 80
            path: /sync-bot(/|$)(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: euler-icon-service
spec:
  tls:
    - hosts:
        - eulericon.openeuler.org
      secretName: euler-icon-tls
  rules:
    - host: eulericon.openeuler.org
      http:
        paths:
          - backend:
              serviceName: euler-icon-service
              servicePort: 80
            path: /
